# ToggleDesktopIcon

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.bat  create_icon.py
config/: settings.ini.template
include/: Application.h  Common.h  ConfigManager.h  DesktopIconManager.h  HotkeyManager.h  SettingsWindow.h  SystemTrayManager.h
resources/: app.manifest  app.rc
src/: Application.cpp  ConfigManager.cpp  DesktopIconManager.cpp  HotkeyManager.cpp  SettingsWindow.cpp  SystemTrayManager.cpp  main.cpp
